2011-03-04  Shujing Zhao  <pearly.zhao@oracle.com>

	* libproc/common/Pcontrol.c: Comment the codes about write ctf file.
	Add ptrace code if needed.

2011-02-25  Shujing Zhao  <pearly.zhao@oracle.com>

	* libdtrace/dt_impl.h (dt_module_t): Remove memeber dm_modid since
	there is no module id at Linux.
	* libdtrace/dtrace.h (dtrace_objinfo_t): Remove memeber dto_id.
	* libdtrace/dt_module.c, libdtrace/dt_open.c: Remove the reference to
	dm_modid and dto_id.
	* libdtrace/*, common/ctf/*, libproc/common/*: Remove inclusion header
	file sysmacros.h.
	* runtest.sh: Update.

2011-02-12  Shujing Zhao  <pearly.zhao@oracle.com>

	* libdtrace/procfs.sed.in: Include the needed and existing header
	files.

2011-02-11  Shujing Zhao  <pearly.zhao@oracle.com>
	
	* libproc/common/Putil.c: Change dprintf to _dprintf.
	* libproc/common/Putil.h: Adjust.
	* libproc/common/Pcontrol.c, libproc/common/Pexecname.c,
	libproc/common/Psymtab_machelf32.c, libproc/common/Pzone.c,
	libproc/common/Pidle.c, libproc/common/pr_meminfo.c,
	libproc/common/Pscantext.c, common/Pstack.c, libproc/common/Psymtab.c,
	libproc/common/Pcore.c, libproc/common/Pservice.c: Adjust caller.

2011-02-10  Shujing Zhao  <pearly.zhao@oracle.com>

	* cmd/common/dtrace.c: Assigned g_ofp to stdout in main function for
	stdout is a macro and not be address constants at compile time.
	* demo/*: Add more test cases.
	* runtest.sh: Added.
	* libdtrace/makefile: Adjust regs.d.
	* makefile: Adjust.

2011-01-26  Shujing Zhao  <pearly.zhao@oracle.com>

	* libdtrace/makefile (signal.d): Exchange the line of SIGCLD and
	SIGCHLD, SIGPOLL and SIGIO.
	(install): Install errno.d regs.d signal.d unistd.d to the
	/usr/lib/dtrace.
	* libdtrace/i386/regs.sed.in: Remove @.

2011-01-21  Shujing Zhao  <pearly.zhao@oracle.com>

	* libdtrace/dt_open.c: Fix the directory of _dtrace_defcpp.
	* libdtrace/io.sed.in, ip.sed.in, net.sed.in, procfs.sed.in,
	sysevent.sed.in, tcp.sed.in, udp.sed.in, i386/regs.sed.in: Remove the